@@ -1,5 +1,9 @@
 2009-09-24  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* geo_normalize.c/h, geotiff_proj4.c: Added DefnSet to GTIFDefn so 
+	it can be properly established if a definition was set or if there
+	were no geokeys (#12).  Corrects serious interim bug in geotiff_proj4.c
+
 	* geo_new.c: avoid buffer overrun on corrupt input file (#14).
 
 	* geo_print.c: Improve the precision when formatting values (#13).
